@@ -3,45 +3,38 @@ package operations;
 import br.upe.operations.SubscriptionCRUD;
 import br.upe.pojos.Subscription;
 import org.junit.jupiter.api.*;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+
 import java.io.*;
+import java.nio.file.*;
 import java.time.*;
 import java.util.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+//import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-
-class SubscriptionCRUDTest {
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+public class SubscriptionCRUDTest {
     private SubscriptionCRUD subscriptionCRUD;
-    private static final String STATE_PATH = ".\\state";
-    private static final String SUBSCRIPTIONS_PATH = STATE_PATH+"\\subscriptions.csv";
-    private static final Logger logger = Logger.getLogger(SubscriptionCRUDTest.class.getName());
+    private final String filePath = ".\\state\\subscriptions.csv";
 
-    @BeforeEach
+    @BeforeAll
     public void setup() {
         subscriptionCRUD = new SubscriptionCRUD();
     }
 
-    @AfterEach
-    void clearFiles() {
-        try {
-            Files.deleteIfExists(Paths.get(SUBSCRIPTIONS_PATH));
-        } catch (IOException e) {
-            logger.log(Level.SEVERE, "Error when trying to delete files", e);
-        }
+    @BeforeEach
+    public void cleanFile() throws IOException {
+        Files.deleteIfExists(Paths.get(filePath));
+        Files.createFile(Paths.get(filePath));
+    }
 
-        try {
-            Files.deleteIfExists(Paths.get(STATE_PATH));
-        } catch (IOException e) {
-            logger.log(Level.SEVERE, "Error when trying to delete directory", e);
-        }
+    @AfterAll
+    public void tearDown() throws IOException {
+        //deleteDirectoryRecursively(Paths.get(".\\state"));
     }
 
     @Test
-    void testCreateSubscription() throws IOException {
+    public void testCreateSubscription() throws IOException {
         Subscription subscription = new Subscription();
         subscription.setUuid(UUID.randomUUID());
         subscription.setSessionUuid(UUID.randomUUID());
@@ -49,13 +42,13 @@ class SubscriptionCRUDTest {
         subscription.setDate(Date.from(Instant.now()));
         subscriptionCRUD.createSubscription(subscription);
 
-        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
+        List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertTrue(lines.getFirst().contains(subscription.getUuid().toString()));
+        assertTrue(lines.get(0).contains(subscription.getUuid().toString()));
     }
 
     @Test
-    void testDeleteSubscription() throws IOException {
+    public void testDeleteSubscription() throws IOException {
         UUID uuidToDelete = UUID.randomUUID();
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(uuidToDelete);
@@ -72,13 +65,13 @@ class SubscriptionCRUDTest {
 
         subscriptionCRUD.deleteSubscription(uuidToDelete);
 
-        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
+        List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertFalse(lines.getFirst().contains(uuidToDelete.toString()));
+        assertFalse(lines.get(0).contains(uuidToDelete.toString()));
     }
 
     @Test
-    void testUpdateSubscription() throws IOException {
+    public void testUpdateSubscription() throws IOException {
         UUID uuidToUpdate = UUID.randomUUID();
         Subscription original = new Subscription();
         original.setUuid(uuidToUpdate);
@@ -94,13 +87,13 @@ class SubscriptionCRUDTest {
 
         subscriptionCRUD.updateSubscription(uuidToUpdate, updated);
 
-        List<String> lines = Files.readAllLines(Paths.get(SUBSCRIPTIONS_PATH));
+        List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertTrue(lines.getFirst().contains(updated.getDate().toInstant().toString()));
+        assertTrue(lines.get(0).contains(updated.getDate().toInstant().toString()));
     }
 
     @Test
-    void testReturnSubscriptionByUuid() {
+    public void testReturnSubscriptionByUuid() {
         UUID uuidToReturn = UUID.randomUUID();
         Subscription subscription = new Subscription();
         subscription.setUuid(uuidToReturn);
@@ -115,7 +108,7 @@ class SubscriptionCRUDTest {
     }
 
     @Test
-    void testReturnAllSubscriptions() {
+    public void testReturnAllSubscriptions() {
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(UUID.randomUUID());
         subscription1.setSessionUuid(UUID.randomUUID());
@@ -132,4 +125,19 @@ class SubscriptionCRUDTest {
         Collection<Subscription> subscriptions = SubscriptionCRUD.returnSubscription();
         assertEquals(2, subscriptions.size());
     }
+// Provavelmente vai virar um de teste
+//    private void deleteDirectoryRecursively(Path path) throws IOException {
+//        if (Files.exists(path)) {
+//            try (Stream<Path> paths = Files.walk(path)) {
+//                paths.sorted(Comparator.reverseOrder())
+//                        .forEach(file -> {
+//                            try {
+//                                Files.delete(file);
+//                            } catch (IOException e) {
+//                                e.printStackTrace();
+//                            }
+//                        });
+//            }
+//        }
+//    }
 }
